<resources>
    <string name="app_name">MineSweeper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="reset">RESET</string>
    <string name="cheat">CHEAT</string>
    <string name="validate">VALIDATE</string>
    <string name="info">Total Mines present</string>
    <string name="score">Mines Recovered</string>
    <string name="gameover">Incorrect Marked Mines</string>
    <string name="result_victory">VICTORY</string>
    <string name="result_gameover">GAME-OVER</string>
    <string name="cant_validate_1">You still need to find&#160;</string>
    <string name="cant_validate_2">&#160;Mines</string>
    <string name="wait">Hold On</string>
    <string name="need_validation">You need to run validation.\n\nClick the Smiley!</string>
    <string name="done_here">You\'re done here</string>
    <string name="resetting">Lets reset the game</string>
    <string name="giving_up">Giving up?</string>
    <string name="all_lost">All progress will be lost, you\'re sure you want to reset?</string>
    <string name="cheater_head">Cheater</string>
    <string name="cheater_body">You really want to cheat?</string>
    <string name="cheater_announce">Cheat available for&#160;</string>
    <string name="cheater_announce_2">&#160;seconds</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="new_game">New Game</string>
    <string name="legend">LEGEND</string>
    <string name="orig_mine">Original Mines</string>
    <string name="fake_mine">Erroneously Marked Mines</string>
    <string name="caught_mine">Cleared/Caught Mine</string>
    <string name="mine_indicator">M</string>
    <string name="confirm_exit">You\'re sure?</string>
    <string name="confirm_exit_message">All progress will be lost.\nContinue? OR You can save your progress to resume play later.</string>
    <string name="exit">EXIT</string>
    <string name="generic_cnt">2</string>
    <string name="mine_ind">No. of mines in any of the adjacent cells</string>
    <string name="updateGridSize">Size of the Mine Field?</string>
    <string name="updateMines">How many mines should be buried?</string>
    <string name="loading">Loading up MineField</string>
    <string name="settings">Settings</string>
    <string name="timer_holder">00:00</string>
    <string name="summary">Summary</string>
    <string name="time_spent">Time spent sweeping for mines</string>
    <string name="how_to">How to Play?</string>
    <string name="scores">Scores</string>
    <string name="completed_in">Completed in&#160;</string>
    <string name="append_grid">&#160;GRID</string>
    <string name="append_minutes">&#160;min&#160;</string>
    <string name="append_seconds">&#160;sec</string>
    <string name="prefix_On">On&#160;</string>
    <string name="saving">Saving...</string>
    <string name="save_game">Save Game</string>
    <string name="load_saved_game">Load Saved Game</string>

    <string name="share_1">I found&#160;</string>
    <string name="share_2">&#160;mines in a&#160;</string>
    <string name="share_3">&#160;grid in&#160;</string>
    <string name="share_4">&#160;in MineSweeper</string>
    <string name="share_score">Share your MineSweeper score</string>
    <string name="your_score">MineSweeper Score</string>

    <string name="trans_new_game">NewGame</string>
    <string name="trans_score">Score</string>
</resources>
