<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/recovered"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:text="@string/mine_indicator"
            android:id="@+id/recovered_mines" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/score"
            android:layout_gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recovered"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/wrong_mines"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:text="@string/mine_indicator"
            android:id="@+id/wrong_ones" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gameover"
            android:layout_gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrong_mines"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/total_mines"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:text="@string/mine_indicator"
            android:id="@+id/allmines" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/info"
            android:layout_gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_mines"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/time_spent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:text="@string/mine_indicator"
            android:id="@+id/time_sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_spent"
            android:layout_gravity="start" />
    </LinearLayout>
</RelativeLayout>